Fix overflow

--- a/static/css/classify.css
+++ b/static/css/classify.css
@@ -1,5 +1,8 @@
 html, body{
     font-family: 'Noto Sans', sans-serif;
+    width: 100%;
+    height: 100vh;
+    overflow: hidden;
 }
 
 .container {
@@ -17,7 +20,7 @@ html, body{
     flex-direction: row;
 }
 
-.result h3, .result p{
+.result h4 {
     padding: 0.5rem;
     margin: 0.5rem;
 }
@@ -27,10 +30,15 @@ h3{
     font-weight: 500;
 }
 
-p {
+h2 {
     font-size: 1.2em;
 }
 
+p {
+    font-size: 0.8em;
+}
+
 img {
-    width: 40%;
+    width: 30%;
+    height: auto;
 }
